# Bio_script

./: .gitignore  1.py  Update log.rmd  draw_plot.py  main.py  pyproject.toml  readme.md  readme.rmd
CQ_mapping/: align.py
CQ_tools/: CQ_result.py  TMM.py  coverage_calculate.py  get_paths.py  man.py  windows_make.py
DownLoader/: DataBaseDownLoader.py  NCBIdbDownLoader.py  NCBIgenomeDownloader.py  config.ini
GFF_tools/: intron_calculate.py
RNA-seq/: RNA_seq.sh
RNA-seq/support_script/: sam_to_bam_delete.sh
RNA_seq/: RNA_seq.sh
RNA_seq/support_script/: run-featurecounts.R
draw_plot_R/: PCA.R  draw_plot.R  heatplot.R  huatu.R  make_orgDB.R  save_the_result.R
draw_plot_script/: CoordsdDotplot.py  GO_KEGG.R
draw_plot_script/chr4_amh_amhy_draw_plot/: chr4.txt  draw_chr_amhy_amh.py
draw_plot_script/chr4_te_anno/: chr4_te_draw_analysis.py
others_tools/transfer_lefse_in/: covert_lefse_in.py  lefse.in  lefse_output.tsv  pickle_in.py  sample_mapping.txt
script/: GO.R  PCA.R  draw_plot.R
seqtools/: Blast_identify.py  Help.rmd  N50.py  RNA_seq.py  __init__.py  cli.py  draw_plot.py  extract.py  get_longest.py  pygenometrack.py  seqtools.py
