[project]
name = "bioscript"
version = "0.1.0"
description = "An integrated pipeline for bioinformatics sequence processing, RNA-seq analysis, and CQ sex-linked marker identification."
authors = [
    { name = "Xiang Yang", email = "Georicl@outlook.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "biopython>=1.86",
    "gffutils>=0.13",
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "pysam>=0.23.3",
]

[project.scripts]
bio-tools = "main:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["CQ_mapping", "CQ_tools", "seqtools", "main.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
